[project]
name = "pyav-hwaccel-autoresearch"
version = "0.1.0"
description = "Autonomous validation and benchmarking for PyAV hardware-accelerated video workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10,<4",
    "pytest>=8.3,<9",
    "pyright>=1.1.390,<2",
    "rich>=13.9,<14",
    "ruff>=0.8,<1",
    "typer>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyav_hwaccel_autoresearch"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"
ffmpeg = ">=8,<9"
pkg-config = ">=0.29.2,<0.30"

[tool.pixi.pypi-dependencies]
pyav_hwaccel_autoresearch = { path = ".", editable = true }
av = { path = "external/pyav", editable = true }

[tool.pixi.tasks]
doctor = "python -m pyav_hwaccel_autoresearch.cli doctor"
layout = "python -m pyav_hwaccel_autoresearch.cli layout"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "pyright src tests"
test = "pytest -q"

[tool.pyright]
include = ["src", "tests"]
exclude = ["external", ".pixi"]
extraPaths = ["external/pyav"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".pixi", "external"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
